Peparing for 0.2.0 release

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -13,6 +13,9 @@ checksum:
 snapshot:
   name_template: "{{ incpatch .Version }}-next"
 
+release:
+  draft: true
+
 changelog:
   sort: asc
   filters:
