update substreams-rs to 0.5.10 and using anyhow for errors

--- a/substreams-solana/Cargo.toml
+++ b/substreams-solana/Cargo.toml
@@ -12,6 +12,7 @@ categories = ["api-bindings", "external-ffi-bindings", "wasm"]
 rust-version = "1.60"
 
 [dependencies]
-substreams = "^0.5.0"
+substreams = "0.5"
 substreams-solana-macro = { version = "0.10.1", path = "../macro" }
 substreams-solana-core = { version = "0.10.1", path = "../core" }
+anyhow = "1.0.72"
