Unit tested `all_instructions`, fixed bugs, added `id` and `hash` on ConfirmedTransaction, better doc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,6 @@
 [workspace]
-members = [
-    "core",
-    "macro",
-    "substreams-solana",
-]
+members = ["core", "macro", "substreams-solana"]
+resolver = "2"
 
 [profile.release]
 lto = true
