Proper usage of Cargo workspace feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,23 @@
 members = ["core", "macro", "substreams-solana"]
 resolver = "2"
 
+[workspace.package]
+version = "0.11.1"
+edition = "2021"
+description = "Substreams development kit for Solana chains, contains Block model and helpers."
+homepage = "https://substreams.streamingfast.io/"
+repository = "https://github.com/streamingfast/substreams-solana/tree/develop/substreams-solana"
+license = "Apache-2.0"
+readme = "README.md"
+keywords = ["substreams", "solana", "streamingfast", "firehose", "thegraph"]
+categories = ["api-bindings", "external-ffi-bindings", "wasm"]
+rust-version = "1.60"
+
+[workspace.dependencies]
+substreams-solana = { version = "0.11.1", path = "./substreams-solana" }
+substreams-solana-core = { version = "0.11.1", path = "./core" }
+substreams-solana-macro = { version = "0.11.1", path = "./macro" }
+
 [profile.release]
 lto = true
 opt-level = 's'
