--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "substreams-solana-core"
-version = "0.11.1"
-edition = "2021"
-description = "Substreams development kit for Solana chains, contains Rust Firehose Block model and helpers."
-homepage = "https://substreams.streamingfast.io/"
-repository = "https://github.com/streamingfast/substreams-solana/tree/develop/core"
-license = "Apache-2.0"
-readme = "../README.md"
-keywords = ["substreams", "solana", "streamingfast", "firehose", "thegraph"]
-categories = ["wasm"]
-rust-version = "1.64"
+version.workspace = true
+description.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
+license.workspace = true
+readme.workspace = true
+keywords.workspace = true
+categories.workspace = true
+rust-version.workspace = true
 
 [dependencies]
 prost = { version = "0.11" }
