--- a/macro/Cargo.toml
+++ b/macro/Cargo.toml
@@ -1,16 +1,15 @@
 [package]
 name = "substreams-solana-macro"
-version = "0.11.1"
-edition = "2018"
-description = "Substreams development kit for Solana chains, contains helpful macros"
-authors = ["StreamingFast Contributors <team@streamingfast.io>"]
-license = "Apache-2.0"
-homepage = "https://substreams.streamingfast.io/"
-repository = "https://github.com/streamingfast/substreams-rs"
-readme = "../README.md"
-keywords = [ "substreams", "streamingfast", "firehose", "thegraph", "macros"]
-categories = ["api-bindings", "external-ffi-bindings", "wasm"]
-rust-version = "1.60"
+version.workspace = true
+description.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
+license.workspace = true
+readme.workspace = true
+keywords.workspace = true
+categories.workspace = true
+rust-version.workspace = true
 
 [lib]
 proc-macro = true
