--- a/substreams-solana/Cargo.toml
+++ b/substreams-solana/Cargo.toml
@@ -1,19 +1,19 @@
 [package]
 name = "substreams-solana"
-version = "0.11.1"
-edition = "2021"
-description = "Substreams development kit for Solana chains, contains Firehose Block model and helpers."
-homepage = "https://substreams.streamingfast.io/"
-repository = "https://github.com/streamingfast/substreams-solana/tree/develop/substreams-solana"
-license = "Apache-2.0"
-readme = "../README.md"
-keywords = [ "substreams", "solana", "streamingfast", "firehose", "thegraph"]
-categories = ["api-bindings", "external-ffi-bindings", "wasm"]
-rust-version = "1.60"
+version.workspace = true
+description.workspace = true
+edition.workspace = true
+homepage.workspace = true
+repository.workspace = true
+license.workspace = true
+readme.workspace = true
+keywords.workspace = true
+categories.workspace = true
+rust-version.workspace = true
 
 [dependencies]
-substreams = "0.5"
-substreams-solana-macro = { version = "0.11.1", path = "../macro" }
-substreams-solana-core = { version = "0.11.1", path = "../core" }
 anyhow = "1.0.72"
 num_enum = "0.7.0"
+substreams = "0.5"
+substreams-solana-core = { workspace = true }
+substreams-solana-macro = { workspace = true }
